--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -7,7 +7,11 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
 
 #开启端点 2.0版本默认不开启监控端口
 management:
