--- a/user-service/user-apiimpl/src/main/resources/application.properties
+++ b/user-service/user-apiimpl/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8077
 spring.application.name=ps
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+spring.redis.host=139.199.89.237
+spring.redis.port=6380
