--- a/user-service/user-apiimpl/pom.xml
+++ b/user-service/user-apiimpl/pom.xml
@@ -17,16 +17,42 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!--权限校验-->
+		<!--<dependency>-->
+			<!--<groupId>com.github.lujs</groupId>-->
+			<!--<artifactId>auth-permission</artifactId>-->
+			<!--<version>1.0.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
 		<dependency>
-			<groupId>com.github.lujs</groupId>
-			<artifactId>auth-permission</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+		  <groupId>com.github.lujs</groupId>
+		  <artifactId>user-api</artifactId>
+		  <version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<!--nacos注册发现-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
 			<version>0.2.1.RELEASE</version>
 		</dependency>
+
+		<!--MySQL-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<!-- mybatis -->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<!-- alibaba的druid数据库连接池 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.16</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
