--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -13,6 +13,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>auth-permission</module>
+        <module>auth-api</module>
+        <module>auth-apiimpl</module>
     </modules>
 
 
