--- a/auth-service/auth-permission/pom.xml
+++ b/auth-service/auth-permission/pom.xml
@@ -35,6 +35,18 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>user-apiimpl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>auth-apiimpl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
