--- a/auth-service/auth-permission/pom.xml
+++ b/auth-service/auth-permission/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>user-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.lujs</groupId>-->
+            <!--<artifactId>user-apiimpl</artifactId>-->
+            <!--<version>1.0.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -35,18 +40,11 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.lujs</groupId>
-            <artifactId>user-apiimpl</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.github.lujs</groupId>
             <artifactId>auth-apiimpl</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 
