--- a/user-service/user-apiimpl/pom.xml
+++ b/user-service/user-apiimpl/pom.xml
@@ -18,11 +18,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<!--权限校验-->
-		<!--<dependency>-->
-			<!--<groupId>com.github.lujs</groupId>-->
-			<!--<artifactId>auth-permission</artifactId>-->
-			<!--<version>1.0.0-SNAPSHOT</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.github.lujs</groupId>
+			<artifactId>auth-permission</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 		  <groupId>com.github.lujs</groupId>
 		  <artifactId>user-api</artifactId>
