--- a/common/pom.xml
+++ b/common/pom.xml
@@ -42,6 +42,16 @@
             <artifactId>pagehelper</artifactId>
             <version>5.1.8</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
