--- a/system-service/token-apiimpl/pom.xml
+++ b/system-service/token-apiimpl/pom.xml
@@ -38,6 +38,24 @@
             <artifactId>hutool-all</artifactId>
             <version>4.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>user-apiimpl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>auth-apiimpl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>auth-apiimpl</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
