--- a/system-service/token-apiimpl/src/main/resources/application.yml
+++ b/system-service/token-apiimpl/src/main/resources/application.yml
@@ -3,6 +3,38 @@ server:
 spring:
   application:
     name: tokenService
-
+  #数据库
+  datasource:
+    name: test
+    url: jdbc:mysql://139.199.89.237:3306/test_db
+    username: root
+    password: root
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
+  #redis
+  redis:
+    host: 139.199.89.237
+    port: 6380
+  #nacos
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 #验证码开关
-validCode: true
+validCode:
+  flag: false
+  timeout: 5000
