--- a/system-service/user-apiimpl/pom.xml
+++ b/system-service/user-apiimpl/pom.xml
@@ -8,7 +8,6 @@
 		<artifactId>system-service</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com.github.lujs</groupId>
 	<artifactId>user-apiimpl</artifactId>
 	<name>user-apiimpl</name>
 
@@ -20,7 +19,7 @@
 		<!--权限校验-->
 		<dependency>
 			<groupId>com.github.lujs</groupId>
-			<artifactId>auth-plugin</artifactId>
+			<artifactId>auth-permission</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
