--- a/common/pom.xml
+++ b/common/pom.xml
@@ -52,6 +52,18 @@
             <version>1.2.47</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.60</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
