--- a/system-service/token-apiimpl/pom.xml
+++ b/system-service/token-apiimpl/pom.xml
@@ -56,6 +56,11 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
+        </dependency>
     </dependencies>
 
 
