调整依赖关系

--- a/system-service/auth-api/pom.xml
+++ b/system-service/auth-api/pom.xml
@@ -23,6 +23,11 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>config</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
