--- a/system-service/user-api/pom.xml
+++ b/system-service/user-api/pom.xml
@@ -17,6 +17,11 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>config</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.6</version>
