--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>common</module>
+        <module>config</module>
         <module>gateway-service</module>
         <module>system-service</module>
         <module>auth-plugin</module>
