--- a/system-service/auth-api-impl/src/main/resources/application.yml
+++ b/system-service/auth-api-impl/src/main/resources/application.yml
@@ -1,3 +1,40 @@
+server:
+  port: 8075
+spring:
+  application:
+    name: auth-service
+  #nacos
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  #redis
+  redis:
+    host: 139.199.89.237
+    port: 6380
+
+  #数据库
+  datasource:
+    name: test
+    url: jdbc:mysql://139.199.89.237:3306/test_db
+    username: root
+    password: root
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
 
 # mybatis-plus
 mybatis-plus:
