--- a/common/pom.xml
+++ b/common/pom.xml
@@ -70,6 +70,12 @@
             <version>1.60</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>3.2.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
