--- a/system-service/auth-api-impl/src/main/resources/application.yml
+++ b/system-service/auth-api-impl/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   #数据库
   datasource:
     name: test
-    url: jdbc:mysql://49.233.171.48:3306/micro_service?serverTimezone=UTC
+    url: jdbc:mysql://49.233.171.48:3306/micro_service?serverTimezone=UTC&characterEncoding=utf-8
     username: root
     password: root
     # 使用druid数据源
