--- a/system-service/token-api-impl/pom.xml
+++ b/system-service/token-api-impl/pom.xml
@@ -40,6 +40,18 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>transmit-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.lujs</groupId>
+                    <artifactId>config</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>com.github.axet</groupId>
             <artifactId>kaptcha</artifactId>
             <version>0.0.9</version>
