--- a/auth-plugin/pom.xml
+++ b/auth-plugin/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>auth-permission</module>
+        <module>auth-api-permission</module>
     </modules>
 
 
