--- a/system-service/auth-api-impl/src/main/resources/application.yml
+++ b/system-service/auth-api-impl/src/main/resources/application.yml
@@ -7,11 +7,12 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 49.233.171.48:8848
   #redis
   redis:
-    host: 139.199.89.237
-    port: 6380
+    host: 127.0.0.1
+    port: 6379
+    password: 123456
 
   #数据库
   datasource:
