--- a/transmit-service/transmit-api-impl/src/main/resources/application.yml
+++ b/transmit-service/transmit-api-impl/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 49.233.171.48:8848
   #数据库
   datasource:
     name: test
@@ -32,9 +32,13 @@ spring:
     maxOpenPreparedStatements: 20
   #redis
   redis:
-    host: 139.199.89.237
-    port: 6380
-
+    host: 127.0.0.1
+    port: 6379
+    password: 123456
+    config:
+      maxTotal: 400
+      maxIdle: 10
+      maxWaitMillis: 100000
 # mybatis-plus
 mybatis-plus:
   mapper-locations: classpath*:/mapper/*Mapper.xml
