--- a/system-service/token-api-impl/pom.xml
+++ b/system-service/token-api-impl/pom.xml
@@ -12,14 +12,14 @@
     <artifactId>token-api-impl</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.lujs</groupId>
             <artifactId>common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>com.github.lujs</groupId>
@@ -52,11 +52,6 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.github.axet</groupId>
-            <artifactId>kaptcha</artifactId>
-            <version>0.0.9</version>
-        </dependency>
-        <dependency>
             <groupId>com.github.lujs</groupId>
             <artifactId>auth-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
@@ -67,6 +62,12 @@
                     <artifactId>config</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <!-- 验证码 -->
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
