--- a/system-service/token-api/pom.xml
+++ b/system-service/token-api/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>token-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.lujs</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
