--- a/system-service/user-api/pom.xml
+++ b/system-service/user-api/pom.xml
@@ -27,6 +27,12 @@
             <version>2.1.2.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+            <version>10.2.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
