--- a/system-service/token-api-impl/pom.xml
+++ b/system-service/token-api-impl/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>token-api-impl</artifactId>
+    <name>token-service</name>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
