--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -20,6 +20,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
         <!--nacos相关-->
         <dependency>
             <groupId>com.github.lujs</groupId>
