--- a/system-service/token-api-impl/pom.xml
+++ b/system-service/token-api-impl/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.lujs</groupId>
             <artifactId>token-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
