--- a/system-service/user-api-impl/pom.xml
+++ b/system-service/user-api-impl/pom.xml
@@ -16,6 +16,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
 		<!--权限校验-->
 		<dependency>
 			<groupId>com.github.lujs</groupId>
