--- a/transmit-service/pom.xml
+++ b/transmit-service/pom.xml
@@ -11,11 +11,12 @@
     </parent>
     <artifactId>transmit-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>transmit-service</name>
+    <name>transmit-service-parent</name>
 
     <modules>
         <module>transmit-api</module>
         <module>transmit-api-impl</module>
+        <module>transmit-request</module>
     </modules>
 
 </project>
