--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <version>0.2.2.RELEASE</version>
         </dependency>
+        <!--配置中心-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>0.2.2.RELEASE</version>
+        </dependency>
         <!-- sentinel开始 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
