--- a/system-service/auth-api-impl/pom.xml
+++ b/system-service/auth-api-impl/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <version>0.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>0.2.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
