--- a/common/pom.xml
+++ b/common/pom.xml
@@ -86,6 +86,11 @@
             <version>5.2.2.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!-- 导入log4j2依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
