--- a/transmit-service/transmit-request/src/main/resources/bootstrap.properties
+++ b/transmit-service/transmit-request/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 spring.cloud.nacos.config.server-addr=49.233.171.48:8848
+#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.application.name=request_config
 spring.cloud.nacos.config.file-extension=yaml
