--- a/auth-plugin/auth-api-permission/pom.xml
+++ b/auth-plugin/auth-api-permission/pom.xml
@@ -16,12 +16,23 @@
             <groupId>com.github.lujs</groupId>
             <artifactId>user-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.lujs</groupId>
+                    <artifactId>config</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.lujs</groupId>
             <artifactId>transmit-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.lujs</groupId>
+                    <artifactId>config</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
