--- a/auth-plugin/auth-permission/pom.xml
+++ b/auth-plugin/auth-permission/pom.xml
@@ -15,6 +15,12 @@
             <groupId>com.github.lujs</groupId>
             <artifactId>user-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.lujs</groupId>
+                    <artifactId>config</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
