--- a/config/pom.xml
+++ b/config/pom.xml
@@ -8,7 +8,6 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>config</artifactId>
 
     <dependencies>
@@ -16,26 +15,18 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.10.0</version>
-            <scope>compile</scope>
+            <version>${mybatis-plus-boot-starter}</version>
         </dependency>
         <!-- 数据库相关 -->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.1</version>
-            <scope>compile</scope>
+            <version>${mybatis}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.20</version>
-            <scope>compile</scope>
+            <version>${druid}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
