--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -8,7 +8,6 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>gateway-service</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <name>gateway-service</name>
 
     <dependencies>
@@ -39,19 +38,18 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.0.1-jre</version>
-            <scope>compile</scope>
+            <version>${guava}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>0.2.2.RELEASE</version>
+            <version>${nacos-discovery}</version>
         </dependency>
         <!--配置中心-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-            <version>0.2.2.RELEASE</version>
+            <version>${nacos-config}</version>
         </dependency>
         <!-- sentinel开始 -->
         <dependency>
@@ -61,17 +59,17 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
-            <version>2.1.1.RELEASE</version>
+            <version>${alibaba-sentinel}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
-            <version>2.1.1.RELEASE</version>
+            <version>${sentinel-gateway}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-nacos</artifactId>
-            <version>1.7.0</version>
+            <version>${sentinel-datasource-nacos}</version>
         </dependency>
     </dependencies>
 
