--- a/system-service/auth-api-impl/pom.xml
+++ b/system-service/auth-api-impl/pom.xml
@@ -10,11 +10,6 @@
     <artifactId>auth-api-impl</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>auth-service</name>
-    <description>Demo project for Spring Boot</description>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -39,12 +34,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>0.2.2.RELEASE</version>
+            <version>${nacos-discovery}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-            <version>0.2.2.RELEASE</version>
+            <version>${nacos-config}</version>
         </dependency>
     </dependencies>
 
