--- a/system-service/pom.xml
+++ b/system-service/pom.xml
@@ -7,11 +7,10 @@
         <groupId>com.github.lujs</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    
-    <artifactId>system-service-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>system-service</artifactId>
+    <name>system-service-parent</name>
 
     <modules>
         <module>auth-api</module>
