--- a/system-service/token-api-impl/pom.xml
+++ b/system-service/token-api-impl/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>token-api-impl</artifactId>
     <name>token-service</name>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -71,26 +72,19 @@
         </dependency>
         <!-- 验证码 -->
         <dependency>
-            <groupId>com.github.axet</groupId>
-            <artifactId>kaptcha</artifactId>
-            <version>0.0.9</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
-            <version>2.1.2.RELEASE</version>
-            <scope>compile</scope>
         </dependency>
         <!--nacos注册发现-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>0.2.2.RELEASE</version>
+            <version>${nacos-discovery}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-            <version>0.2.2.RELEASE</version>
+            <version>${nacos-config}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
