--- a/system-service/user-api-impl/pom.xml
+++ b/system-service/user-api-impl/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<artifactId>user-api-impl</artifactId>
 	<name>user-service</name>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
@@ -41,12 +42,12 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-			<version>0.2.2.RELEASE</version>
+			<version>${nacos-discovery}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-			<version>0.2.2.RELEASE</version>
+			<version>${nacos-config}</version>
 		</dependency>
 	</dependencies>
 
