--- a/system-service/user-api/pom.xml
+++ b/system-service/user-api/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>user-api</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+
     <dependencies>
         <dependency>
             <groupId>com.github.lujs</groupId>
@@ -24,15 +25,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
-            <version>2.1.2.RELEASE</version>
-            <scope>compile</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-core</artifactId>
-            <version>10.2.3</version>
-            <scope>compile</scope>
-        </dependency>-->
     </dependencies>
 
 
