--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
         <sentinel-datasource-nacos>1.7.0</sentinel-datasource-nacos>
     </properties>
 
+    <dependencies>
+        <!-- sleuth -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <!-- zipkin -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+    </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
